Fix #177: Review Java warnings
- Replace explicit type argument by diamond operator <>
- Use List.of
- Enhance switch